#2517 Documentation improvements and minor refactorings.